--- a/java/src/test/resources/spring-cloud-bootstrap.properties
+++ b/java/src/test/resources/spring-cloud-bootstrap.properties
@@ -1,1 +1,13 @@
-spring.cloud.propertiesFile: ${user.home}/localconfig.properties
+#
+# Spring Cloud Connectors spring-cloud-localconfig settings.
+#
+# Either a relative or absolute file path is required here, or you can set the path to the
+# properties file as a system property in your JVM launch.
+#
+# Only system property placeholders will be substituted for this value, although
+# spring-cloud-bootstrap.properties is loaded from the classpath.
+#
+# Typically you'd point to somewhere external like ${user.home}/spring-cloud/myprops.properties
+#
+
+spring.cloud.propertiesFile: src/test/resources/spring-cloud-local.properties
