--- a/scala/src/main/resources/application.conf
+++ b/scala/src/main/resources/application.conf
@@ -1,8 +1,19 @@
 #local "cloud" environment
-VCAP_SERVICES={"mlab":[{"credentials": {"uri": "mongodb://localhost/devnexus"},"syslog_drain_url": null,"volume_mounts": [],"label": "mlab","provider": null,           "plan": "sandbox","name": "devnexus","tags": ["Cloud Databases","Developer Tools","Web-based","Data Store","document","Windows","Security","IT Management","mongodb","Mac"]}]}
+vcap_services="""
+  {"mlab":[
+    {"credentials":
+      {"uri": "mongodb://localhost/devnexus"},
+       "syslog_drain_url": null,
+       "volume_mounts": [],
+       "label": "mlab",
+       "provider": null,
+       "plan": "sandbox",
+       "name": "devnexus",
+       "tags": ["Cloud Databases","Developer Tools","Web-based","Data Store","document","Windows","Security","IT Management","mongodb","Mac"]
+      }
+   ]
+  }
+"""
 
 #real cloud environment (if deployed to cloud)
-VCAP_SERVICES=${?VCAP_SERVICES}
-
-#list of Mongo configurations
-mongoConfigs=${VCAP_SERVICES.mlab}
+vcap_services=${?VCAP_SERVICES}
