node in the cloud

--- a/node/package.json
+++ b/node/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "mongodb": "^2.2.24",
-    "restify": "~4.3.0"
+    "restify": "~4.3.0",
+    "cfenv": "^1.0.4"
   },
   "devDependencies": {
-    "cfenv": "^1.0.4",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "supertest": "^3.0.0"
