--- a/scala/src/main/resources/application.conf
+++ b/scala/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 #local "cloud" environment
-vcap_services="""
+vcap_services=
   {"mlab":[
     {"credentials":
       {"uri": "mongodb://localhost/devnexus"},
@@ -13,7 +13,7 @@ vcap_services="""
       }
    ]
   }
-"""
+
 
 #real cloud environment (if deployed to cloud)
 vcap_services=${?VCAP_SERVICES}
