--- a/java/build.gradle
+++ b/java/build.gradle
@@ -10,9 +10,14 @@ buildscript {
 	}
 }
 
+plugins {
+	id "org.sonarqube" version "2.5"
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'jacoco'
 
 jar {
 	baseName = 'devnexus-microservice-java'
@@ -40,5 +45,12 @@ dependencies {
 bootRun {
 	//this configuration is to allow Spring Boot to run locally connecting to MongoDB at localhost
 	systemProperties "spring.cloud.appId": "devnexus", "spring.cloud.devnexus": "mongodb://localhost/devnexus"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+    }
 }
 
