--- a/java/src/test/resources/spring-cloud-local.properties
+++ b/java/src/test/resources/spring-cloud-local.properties
@@ -1,2 +1,2 @@
 spring.cloud.appId: devnexus-microservices-java
-spring.cloud.devnexus: mongodb://localhost/devnexus
+spring.cloud.cloudaustin: mongodb://localhost/devnexus
