--- a/scala/manifest.yml
+++ b/scala/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
-- name: devnexus-microservices-scala
+- name: cloudaustin-microservices-scala
   buildpack: java_buildpack
   path: target/scala-2.11/devnexus-microservices-scala-assembly-0.1.0-SNAPSHOT.jar
   services:
-    - devnexus
+    - cloudaustin
