--- a/scala/src/main/resources/application.conf
+++ b/scala/src/main/resources/application.conf
@@ -8,7 +8,7 @@ vcap_services=
        "label": "mlab",
        "provider": null,
        "plan": "sandbox",
-       "name": "devnexus",
+       "name": "cloudaustin",
        "tags": ["Cloud Databases","Developer Tools","Web-based","Data Store","document","Windows","Security","IT Management","mongodb","Mac"]
       }
    ]
